<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btUserInCon"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btUserInCon_text" />
    <Button
        android:id="@+id/btComCon"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btComCon_text" />
    <Switch
        android:id="@+id/swRunProcess"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swProcess_text"
        android:textSize="20sp"/>

</LinearLayout>
